[tool.poetry]
name = "python-env-example"
version = "0.1.0"
description = ""
authors = ["test"]
readme = "README.md"
packages = [{include = "python_env_example"}]

[tool.poetry.dependencies]
python = "^3.11"
shap = "^0.44.1"
flaml = "^2.1.1"
scikit-learn = "^1.4.1.post1"
tpot = "^0.12.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pyarrow = "^15.0.0"
lale = "^0.8.0"
lightgbm = "^4.3.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.13.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
